--- a/input.css
+++ b/input.css
@@ -27,7 +27,7 @@
 }
 
 .article_style {
-   @apply flex-col mx-auto p-4 w-full col-span-2
+   @apply flex-col mx-auto p-4 w-full md:col-span-2
 }
 
 .marine-btn{
