--- a/src/output.css
+++ b/src/output.css
@@ -570,10 +570,6 @@ video {
   top: 50%;
 }
 
-.col-span-1 {
-  grid-column: span 1 / span 1;
-}
-
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
@@ -607,6 +603,10 @@ video {
   box-sizing: border-box;
 }
 
+.block {
+  display: block;
+}
+
 .flex {
   display: flex;
 }
@@ -617,6 +617,10 @@ video {
 
 .hidden {
   display: none;
+}
+
+.h-20 {
+  height: 5rem;
 }
 
 .h-28 {
@@ -639,12 +643,8 @@ video {
   height: 100vh;
 }
 
-.h-40 {
-  height: 10rem;
-}
-
-.h-20 {
-  height: 5rem;
+.w-20 {
+  width: 5rem;
 }
 
 .w-6 {
@@ -653,14 +653,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-40 {
-  width: 10rem;
-}
-
-.w-20 {
-  width: 5rem;
 }
 
 .-translate-x-1\/2 {
@@ -675,6 +667,10 @@ video {
 
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .grid-cols-3 {
@@ -709,18 +705,24 @@ video {
   gap: 0.5rem;
 }
 
-.gap-4 {
-  gap: 1rem;
-}
-
 .gap-3 {
   gap: 0.75rem;
+}
+
+.gap-4 {
+  gap: 1rem;
 }
 
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
+.space-x-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .place-self-end {
@@ -747,10 +749,6 @@ video {
   border-width: 2px;
 }
 
-.border-b-2 {
-  border-bottom-width: 2px;
-}
-
 .border-b {
   border-bottom-width: 1px;
 }
@@ -765,6 +763,11 @@ video {
   border-color: hsl(0 0% 100% / var(--tw-border-opacity));
 }
 
+.bg-alabaster {
+  --tw-bg-opacity: 1;
+  background-color: hsl(231 100% 99% / var(--tw-bg-opacity));
+}
+
 .bg-lightBlue {
   --tw-bg-opacity: 1;
   background-color: hsl(206 94% 87% / var(--tw-bg-opacity));
@@ -775,33 +778,22 @@ video {
   background-color: hsl(217 100% 97% / var(--tw-bg-opacity));
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: hsl(0 0% 100% / var(--tw-bg-opacity));
-}
-
-.bg-marineBlue {
-  --tw-bg-opacity: 1;
-  background-color: hsl(213 96% 18% / var(--tw-bg-opacity));
-}
-
 .bg-purplishBlue {
   --tw-bg-opacity: 1;
   background-color: hsl(243 100% 62% / var(--tw-bg-opacity));
 }
 
-.bg-pastelBlue {
+.bg-white {
   --tw-bg-opacity: 1;
-  background-color: hsl(228 100% 84% / var(--tw-bg-opacity));
+  background-color: hsl(0 0% 100% / var(--tw-bg-opacity));
 }
 
-.bg-alabaster {
-  --tw-bg-opacity: 1;
-  background-color: hsl(231 100% 99% / var(--tw-bg-opacity));
+.bg-\[url\(\'assets\/images\/bg-sidebar-mobile\.svg\'\)\] {
+  background-image: url('assets/images/bg-sidebar-mobile.svg');
 }
 
-.bg-\[url\(\'\/assets\/images\/bg-sidebar-desktop\.svg\'\)\] {
-  background-image: url('/assets/images/bg-sidebar-desktop.svg');
+.bg-\[url\(\'\/assets\/images\/bg-sidebar-mobile\.svg\'\)\] {
+  background-image: url('/assets/images/bg-sidebar-mobile.svg');
 }
 
 .bg-cover {
@@ -843,6 +835,11 @@ video {
   line-height: 2.25rem;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -851,11 +848,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -885,14 +877,14 @@ video {
   color: hsl(213 96% 18% / var(--tw-text-opacity));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: hsl(0 0% 100% / var(--tw-text-opacity));
-}
-
 .text-purplishBlue {
   --tw-text-opacity: 1;
   color: hsl(243 100% 62% / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: hsl(0 0% 100% / var(--tw-text-opacity));
 }
 
 .underline {
@@ -933,12 +925,17 @@ video {
 }
 
 .article_style {
-  grid-column: span 2 / span 2;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
   flex-direction: column;
   padding: 1rem;
+}
+
+@media (min-width: 768px) {
+  .article_style {
+    grid-column: span 2 / span 2;
+  }
 }
 
 .marine-btn {
@@ -959,4 +956,46 @@ video {
 .focus\:border-pastelBlue:focus {
   --tw-border-opacity: 1;
   border-color: hsl(228 100% 84% / var(--tw-border-opacity));
+}
+
+@media (min-width: 768px) {
+  .md\:col-span-1 {
+    grid-column: span 1 / span 1;
+  }
+
+  .md\:block {
+    display: block;
+  }
+
+  .md\:h-3\/5 {
+    height: 60%;
+  }
+
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .md\:flex-col {
+    flex-direction: column;
+  }
+
+  .md\:justify-start {
+    justify-content: flex-start;
+  }
+
+  .md\:space-x-3 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+    margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:space-x-0 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(0px * var(--tw-space-x-reverse));
+    margin-left: calc(0px * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:bg-\[url\(\'\/assets\/images\/bg-sidebar-desktop\.svg\'\)\] {
+    background-image: url('/assets/images/bg-sidebar-desktop.svg');
+  }
 }
